<resources>
    <string name="app_name">LoginRegister_Firebase</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="login">Login</string>
    <string name="signup">Sign Up Here</string>
    <string name="sign_in">Sign In</string>
    <string name="store">store</string>
    <string name="not_a_member_yet">Not a Member Yet?</string>
    <string name="simple_product_store_welcome">simple product store,welcome!</string>
    <string name="add_product">Add Product</string>
    <string name="add_name">Add Name</string>
    <string name="add_quentity">Add Quentity</string>
    <string name="add_price">Add Price</string>
    <string name="add">Add</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="edit">Edit</string>
</resources>
