<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context="com.example.dell.Store.EditProductActivity">
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/editname_edt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/add_name"
            android:layout_marginTop="20dp"
            android:paddingLeft="10dp"
            android:textSize="18sp" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/editquentity_edt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/add_quentity"
            android:paddingLeft="10dp"
            android:inputType="number"
            android:textSize="18sp" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/editprice_edt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/add_price"
            android:paddingLeft="10dp"
            android:inputType="number"
            android:textSize="18sp" />
    </android.support.design.widget.TextInputLayout>
    <Button
        android:id="@+id/update"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:background="@drawable/roundedbutton"
        android:text="@string/edit"
        android:onClick="update"
        android:textColor="#fff"
        android:layout_marginTop="30dp"
        android:textSize="18sp" />

</LinearLayout>